# BluetoothGD

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: build.yml
addons/bluetooth_gd/: LICENSE.md  README.md  bluetooth_manager.gdextension  bluetooth_manager.gdextension.uid  icon.png.import
addons/bluetooth_gd/doc_classes/: BluetoothManager.xml
addons/bluetooth_gd/example/: bluetooth_manager.tscn  scan_demo.gd  scan_demo.gd.uid  scan_demo.tscn
cmake/: generate_extension_docs.py
demo/: bluetooth_godot_icon.png.import  bluetooth_godot_robot_icon.png.import  bluetooth_godot_robot_ref.jpg.import  bluetooth_manager.gdextension  bluetooth_manager.gdextension.uid  icon  icon.png.import  icon.svg.import  preview.png.import  project.godot
demo/.godot/: extension_list.cfg  global_script_class_cache.cfg
demo/.godot/editor/: controller_pairing.tscn-editstate-aa0fb0087ed0e038ff7a24bed148fb89.cfg  controller_pairing.tscn-folding-aa0fb0087ed0e038ff7a24bed148fb89.cfg  editor_layout.cfg  editor_script_doc_cache.res  filesystem_cache10  filesystem_update4  project_metadata.cfg  script_editor_cache.cfg
demo/.godot/imported/: icon.svg-218a8f2b3041327d8a5756f3a245f83b.ctex  icon.svg-218a8f2b3041327d8a5756f3a245f83b.md5
demo/addons/bluetooth_gd/: bluetooth_manager.gdextension
demo/scenes/: controller_pairing.gd  controller_pairing.gd.uid  controller_pairing.tscn
demo/scripts/: device_list_presenter.gd  device_list_presenter.gd.uid
doc_classes/: BluetoothManager.xml
docs/: IMPROVEMENT_PLAN.md
scripts/: build-linux-docker.sh  build-windows.ps1
src/: bluetooth_device_info.h  bluetooth_manager.cpp  bluetooth_manager.h  register_types.cpp  register_types.h
src/backend/: backend_factory.cpp  bluetooth_backend.h  bluetooth_commands.h  bluetooth_error.h  bluetooth_events.h  device_cache.h  pairing_pending.h  scan_options.h
src/platform/linux/: bluez_agent.cpp  bluez_agent.h  bluez_dbus.cpp  bluez_dbus.h  dbus_loader.cpp  dbus_loader.h  linux_backend.cpp  linux_backend.h
src/platform/macos/: macos_backend.h  macos_backend.mm
src/platform/windows/: windows_backend.cpp  windows_backend.h  winrt_bluetooth.cpp  winrt_bluetooth.h
src/threading/: thread_safe_queue.h  worker_thread.cpp  worker_thread.h
terminals/: 1.txt  2.txt
tests/: test_device_info.cpp
